@@ -18,10 +18,15 @@
 package org.apache.cassandra.streaming;
 
 import java.net.InetAddress;
+import java.util.Collections;
+import java.util.Map;
 import java.util.Set;
 import java.util.UUID;
 
 import com.google.common.collect.ImmutableSet;
+
+import org.apache.cassandra.dht.Range;
+import org.apache.cassandra.dht.Token;
 
 public abstract class StreamEvent
 {
@@ -47,6 +52,8 @@ public abstract class StreamEvent
         public final boolean success;
         public final int sessionIndex;
         public final Set<StreamRequest> requests;
+        public final String description;
+        public final Map<String, Set<Range<Token>>> transferredRangesPerKeyspace;
 
         public SessionCompleteEvent(StreamSession session)
         {
@@ -55,6 +62,8 @@ public abstract class StreamEvent
             this.success = session.isSuccess();
             this.sessionIndex = session.sessionIndex();
             this.requests = ImmutableSet.copyOf(session.requests);
+            this.description = session.description();
+            this.transferredRangesPerKeyspace = Collections.unmodifiableMap(session.transferredRangesPerKeyspace);
         }
     }
 
